# datashare

./: .gitattributes  .gitignore  COOKBOOK.md  LICENSE.txt  Makefile  README.md  README.spike.md  SUMMARY.md  compose.yml  datashare-devenv.properties.template  datashare-devenv.sh  docker-compose.yml  installSwaggerUi.sh  jitpack.yml  launchBack.sh  launchServer.sh  parent.yml  patch_qpid_meta.sh  pom.xml  run.sh  sleep.yml  user-guide-for-linux.md  user-guide-for-windows.md
.circleci/: check_if_artifact_is_deployed.sh  config.yml  deploy_artifact.sh  get_maven_dependent_projects.sh  maven-release-settings.xml  publish_doc_if_necessary.sh  publish_doc_if_web_changed.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
commons-test/: pom.xml
datashare-api/: Makefile  README.md  pom.xml
datashare-app/: pom.xml
datashare-app/src/main/python/: README.md  pyproject.toml  redis_worker.py  task.json  task.py  worker.py
datashare-app/src/main/python-worker/: pyproject.toml
datashare-app/src/main/python-worker/python_worker/: __main__.py  tasks.py
datashare-app/src/main/python-worker/python_worker/icij_worker/: __init__.py  worker.py  worker_amqp.py
datashare-app/src/main/python/amqp_client/: __init__.py
datashare-batch/: pom.xml
datashare-temporal-python/: pyproject.toml
datashare-temporal-python/ds_temporal/: act_worker.py  dag_workflow.py  dependencies.py  exceptions.py  execute_multilingual_workflow.py  execute_workflow.py  multilingual_workflow.py  utils.py  wf_worker.py  worker.py
datashare-temporal-python/qa/: ruff.toml
(+3037 files in other folders)
