[project]
name = "ds-temporal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icij-common>=0.7.3",
    "nest-asyncio>=1.6.0",
    "temporalio>=1.20.0",
]


[tool.hatch.build.targets.sdist]
include = ["ds_temporal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
